--- a/LevelObjectIcons/LevelObjectIcons.csproj
+++ b/LevelObjectIcons/LevelObjectIcons.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFrameworks>net461;netstandard2.1</TargetFrameworks>
     <Nullable>enable</Nullable>
     <LangVersion>preview</LangVersion>
 
@@ -11,7 +11,7 @@
 
     <PackageId>DanielWillett.LevelObjectIcons</PackageId>
     <Title>Unturned Glazier UI Tools</Title>
-    <Version>1.0.1</Version>
+    <Version>1.1.0</Version>
     <Authors>Daniel Willett</Authors>
     <Product>DanielWillett.LevelObjectIcons</Product>
     <Description>LevelObject icon renderer for the Unturned Map Editor.</Description>
@@ -22,11 +22,12 @@
     <RepositoryUrl>https://github.com/DanielWillett/LevelObjectIcons</RepositoryUrl>
     <PackageTags>unturned, modding, module, level objects, devkit</PackageTags>
     <PackageReleaseNotes></PackageReleaseNotes>
+    <PackageIcon>icon.png</PackageIcon>
     <IncludeSymbols>True</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
 
-    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
-    <GenerateDocumentationFile>False</GenerateDocumentationFile>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
 
     <AssemblyVersion>$(Version).0</AssemblyVersion>
     <FileVersion>$(Version).0</FileVersion>
@@ -45,10 +46,11 @@
 
   <ItemGroup>
     <None Include="../README.md" Pack="true" PackagePath="\" />
+    <None Include="../icon.png" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DanielWillett.UnturnedUITools" Version="[1.1.1,)" />
+    <PackageReference Include="DanielWillett.UnturnedUITools" Version="[1.3.0,)" />
   </ItemGroup>
 
   <ItemGroup>
